# PLDI25-submission-sp

./: Dockerfile  README.md
AutomataLibrary/: AutomataLibrary.ml  dune  dune-project
AutomataLibrary/desymbolic/: desymbolic.ml  dune.bak
AutomataLibrary/fa/: arden.ml  backend.ml  basicFa.ml  common.ml  dune  fa.ml  finiteAutomata.ml  normal_regex_typing.ml  normal_sevent_typing.ml  regex.ml  regexTree.ml  sevent.ml  to_regex.ml  to_sevent.ml  translation.ml
AutomataLibrary/qcFa/: dune  gen.ml  qcFa.ml
AutomataLibrary/rawdesym/: common.ml  desymctx.ml  desymeval.ml  dune.bak  rawdesym.ml  resym.ml  satcheck.ml
AutomataLibrary/test/: dune
Clouseau/: .gitignore  README.md  allrun.sh  compile.sh  dune-project  eval.sh  meta-config.json  run.sh  show-term.sh  syn.sh  timeout_syn.sh
Clouseau/ast/: ast.ml  common.ml  dune  pmachine.ml
Clouseau/coq/: ltlf.v
Clouseau/frontend/: common.ml  dune  front.ml  to_item.ml  to_rty.ml  to_term.ml
Clouseau/interpreter/: common.ml  derivative.ml  dune  eval.ml  interpreter.ml  runtime.ml
Clouseau/language/: dune  language.ml
Clouseau/lib/: dune
Clouseau/ntypecheck/: dune  normal_item_typing.ml  normal_rty_typing.ml  ntypecheck.ml
Clouseau/pbackend/: astbuilder.ml  dune  fromTerm.ml  pbackend.ml  toplang.ml
Clouseau/rawdesym/: common.ml  desymctx.ml  desymeval.ml  dune  head.ml  intBinary.ml  mapping.ml  rawdesym.ml  satcheck.ml
Clouseau/script/: run_bench.py  run_p.sh
Clouseau/syntax/: common.ml  dune  plan.ml  syntax.ml
Clouseau/synthesis/: abduction.ml  common.ml  dune  gamma.ml  mkTerm.ml  norm.ml  optimize.ml  refine.ml  synthesis.ml
Clouseau/test/: dune
zutils/: dune  zutils.ml
zutils/config/: myconfig.ml  myconfigAst.ml
zutils/normalty/: ast.ml  dune  frontend.ml  normalty.ml  nt.ml  smtty.ml  subst.ml  unification.ml
zutils/prop/: ast.ml  dune  prop.ml  syntax.ml
zutils/prop/frontend/: aux.ml  common.ml  to_constant.ml  to_expr.ml  to_id.ml  to_inst.ml  to_item.ml  to_lit.ml  to_notation.ml  to_pat.ml  to_prop.ml  to_qregex.ml  to_regex.ml  to_sevent.ml.bak  to_strLabel.ml  to_type_dec.ml
zutils/prop/prover/: litencoding.ml  propencoding.ml  prover.ml  smtquery.ml  z3aux.ml
zutils/sugar/: assertion.ml  dune  sugarAux.ml  typed.ml
zutils/typecheck/: dune  normal_constant_typing.ml  normal_id_typing.ml  normal_lit_typing.ml  typecheck.ml  (+1 more)
(+165 files in other folders)
