(library
 (public_name haft.rawdesym)
 (name rawdesym)
 (wrapped true)
 (libraries  zutils AutomataLibrary core compiler-libs language)
 (modules
   common
   intBinary
   desymeval
   resym
   desymctx
   satcheck
   head
   mapping
   rawdesym
 )
 (inline_tests)
 (preprocess (pps ppx_here ppx_inline_test))
)
