(copy_files# prover/*.ml{,i})
(copy_files# frontend/*.ml{,i})

(library
 (name prop)
 (public_name zutils.prop)
 (wrapped true)
 (modules_without_implementation)
 (libraries sugar normalty core ocamlParser ppxlib z3 myconfig)
 (modules
   prop
   ast
   syntax
   ;; Frontend
   common
   to_id
   to_op
   to_constant
   to_lit
   to_notation
   to_prop
   front
   ;; Prover
   z3aux litencoding propencoding prover
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_here))
 (inline_tests)
)
